# b2sw

./: .gitignore  .travis.yml  README.md  pylintrc  pyproject.toml  run.py  scripts.py
b2sw/: app.py  config.py  datamodel.py  planets.py  swapiutils.py
tests/: test_app.py  test_b2sw.py  test_datamodel.py  test_planets.py  test_swapiutils.py
