[tool.poetry]
name = "b2sw"
version = "0.1.0"
description = ""
authors = ["Carlos Felipe Domingues e Oliveira <cfelipe.domingues@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
flask = "^1.0"
requests = "^2.21"
responses = "^0.10.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.2"
autopep8 = "^1.4"

[tool.poetry.scripts]
test = 'scripts:test'