[tool.poetry]
name = "b2sw"
version = "0.1.0"
description = ""
authors = ["Carlos Felipe Domingues e Oliveira <cfelipe.domingues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
requests = "^2.21"
responses = "^0.10.5"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
autopep8 = "^1.4"
codecov = "^2.0"

[tool.poetry.scripts]
test = 'scripts:test'